Add lombok ToString and some improvements